# template-langchain

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: python-ci.yml
src/: README.md
src/langchain_template/: README.md  __init__.py  api.py  cli.py  config.py  logger.py
src/langchain_template/models/: README.md  base.py  schemas.py
tests/: README.md  test_api.py  test_models.py
